--- a/Neural_network/Neural_network/Neural_network.vcxproj.filters
+++ b/Neural_network/Neural_network/Neural_network.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Neural_network.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
+    <ClCompile Include="Image_conversion.cpp">
+      <Filter>Zdrojové soubory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Neural_network.hpp">
+      <Filter>Hlavičkové soubory</Filter>
+    </ClInclude>
+    <ClInclude Include="Image_conversion.hpp">
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
   </ItemGroup>
