Basic GUI added

--- a/Neural_network/Neural_network/Neural_network.vcxproj.filters
+++ b/Neural_network/Neural_network/Neural_network.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Image_conversion.hpp">
       <Filter>Hlavičkové soubory</Filter>
     </ClInclude>
+    <ClInclude Include="MainForm.h">
+      <Filter>Hlavičkové soubory</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
