--- a/Neural_network/Neural_network/Neural_network.vcxproj.filters
+++ b/Neural_network/Neural_network/Neural_network.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Image_conversion.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
+    <ClCompile Include="MainForm.cpp">
+      <Filter>Zdrojové soubory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Neural_network.hpp">
