--- a/Neural_network/Neural_network/Neural_network.vcxproj
+++ b/Neural_network/Neural_network/Neural_network.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Image_conversion.cpp" />
+    <ClCompile Include="MainForm.cpp" />
     <ClCompile Include="Neural_network.cpp" />
     <ClCompile Include="Neural_network_main.cpp" />
   </ItemGroup>
@@ -139,6 +140,7 @@
     <ClInclude Include="Neural_network.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.Composition.Registration" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
