--- a/Neural_network/Neural_network/Neural_network.vcxproj
+++ b/Neural_network/Neural_network/Neural_network.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="NeuralNetMainGUI.cpp" />
     <ClCompile Include="Neural_network.cpp" />
     <ClCompile Include="Neural_network_main.cpp" />
+    <ClCompile Include="Tests.cpp" />
     <ClCompile Include="TrainNetworkGUI.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +142,7 @@
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Neural_network.hpp" />
+    <ClInclude Include="Tests.hpp" />
     <ClInclude Include="TrainNetworkGUI.h">
       <FileType>CppForm</FileType>
     </ClInclude>
